crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__task graph@fingerprint-ignore-test.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/fingerprint-ignore-test
---
[
  {
    "key": [
      "<workspace>/",
      "create-files"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/fingerprint-ignore",
        "task_name": "create-files",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "mkdir -p node_modules/pkg-a && echo '{\"name\":\"pkg-a\"}' > node_modules/pkg-a/package.json && echo 'content' > node_modules/pkg-a/index.js && mkdir -p dist && echo 'output' > dist/bundle.js",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  }
]
