crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__task graph@synthetic-in-subpackage.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/synthetic-in-subpackage
---
[
  {
    "key": [
      "<workspace>/",
      "lint"
    ],
    "node": {
      "task_display": {
        "package_name": "",
        "task_name": "lint",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "vite run a#lint",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/a",
      "lint"
    ],
    "node": {
      "task_display": {
        "package_name": "a",
        "task_name": "lint",
        "package_path": "<workspace>/packages/a"
      },
      "resolved_config": {
        "command": "vite lint",
        "resolved_options": {
          "cwd": "<workspace>/packages/a",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  }
]
