crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__task graph@transitive-dependency-workspace.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/transitive-dependency-workspace
---
[
  {
    "key": [
      "<workspace>/packages/a",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/a",
        "task_name": "build",
        "package_path": "<workspace>/packages/a"
      },
      "resolved_config": {
        "command": "echo Building A",
        "resolved_options": {
          "cwd": "<workspace>/packages/a",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": [
      [
        [
          "<workspace>/packages/a",
          "test"
        ],
        "Explicit"
      ],
      [
        [
          "<workspace>/packages/b2",
          "build"
        ],
        "Topological"
      ],
      [
        [
          "<workspace>/packages/c",
          "build"
        ],
        "Topological"
      ]
    ]
  },
  {
    "key": [
      "<workspace>/packages/a",
      "test"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/a",
        "task_name": "test",
        "package_path": "<workspace>/packages/a"
      },
      "resolved_config": {
        "command": "echo test a",
        "resolved_options": {
          "cwd": "<workspace>/packages/a",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/another-a",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/a",
        "task_name": "build",
        "package_path": "<workspace>/packages/another-a"
      },
      "resolved_config": {
        "command": "echo Building another A",
        "resolved_options": {
          "cwd": "<workspace>/packages/another-a",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/b1",
      "lint"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/b1",
        "task_name": "lint",
        "package_path": "<workspace>/packages/b1"
      },
      "resolved_config": {
        "command": "echo lint b1",
        "resolved_options": {
          "cwd": "<workspace>/packages/b1",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": [
      [
        [
          "<workspace>/packages/c",
          "lint"
        ],
        "Topological"
      ]
    ]
  },
  {
    "key": [
      "<workspace>/packages/b2",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/b2",
        "task_name": "build",
        "package_path": "<workspace>/packages/b2"
      },
      "resolved_config": {
        "command": "echo build b2",
        "resolved_options": {
          "cwd": "<workspace>/packages/b2",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": [
      [
        [
          "<workspace>/packages/c",
          "build"
        ],
        "Topological"
      ]
    ]
  },
  {
    "key": [
      "<workspace>/packages/c",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/c",
        "task_name": "build",
        "package_path": "<workspace>/packages/c"
      },
      "resolved_config": {
        "command": "echo Building C",
        "resolved_options": {
          "cwd": "<workspace>/packages/c",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/c",
      "lint"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/c",
        "task_name": "lint",
        "package_path": "<workspace>/packages/c"
      },
      "resolved_config": {
        "command": "echo lint c",
        "resolved_options": {
          "cwd": "<workspace>/packages/c",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  }
]
